crates/next-custom-transforms/tests/errors/server-actions/server-graph/13/input.js
'use client'
'use strict'

// This is a comment.

'use server'

export async function foo() {}
